tests/snapshots/remove_dependency_test__add_dependency_config.snap
---
source: tests/remove_dependency_test.rs
expression: toml_after_add
---
[project]
name = "with-dependency"

[dependancies]
spring-boot-starter-jdbc = { version = "4.1.0", group = "org.springframework.boot" }
