tests/snapshots/remove_dependency_test__add_dependency_lock.snap
---
source: tests/remove_dependency_test.rs
expression: lock_after_add
---
[[package]]
group = "ch.qos.logback"
artifact = "logback-classic"
version = "1.5.34"
file_name = "logback-classic-1.5.34.jar"
url = "https://repo1.maven.org/maven2/ch/qos/logback/logback-classic/1.5.34/logback-classic-1.5.34.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "ch.qos.logback"
artifact = "logback-core"
version = "1.5.34"

[[package]]
group = "ch.qos.logback"
artifact = "logback-core"
version = "1.5.34"
file_name = "logback-core-1.5.34.jar"
url = "https://repo1.maven.org/maven2/ch/qos/logback/logback-core/1.5.34/logback-core-1.5.34.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "com.zaxxer"
artifact = "HikariCP"
version = "7.0.2"
file_name = "HikariCP-7.0.2.jar"
url = "https://repo1.maven.org/maven2/com/zaxxer/HikariCP/7.0.2/HikariCP-7.0.2.jar"
dependancies = []
packaging = "bundle"
root = false
scope = "compile"
annotations = []

[[package]]
group = "commons-logging"
artifact = "commons-logging"
version = "1.3.5"
file_name = "commons-logging-1.3.5.jar"
url = "https://repo1.maven.org/maven2/commons-logging/commons-logging/1.3.5/commons-logging-1.3.5.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "io.micrometer"
artifact = "micrometer-commons"
version = "1.16.6"
file_name = "micrometer-commons-1.16.6.jar"
url = "https://repo1.maven.org/maven2/io/micrometer/micrometer-commons/1.16.6/micrometer-commons-1.16.6.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.jspecify"
artifact = "jspecify"
version = "1.0.0"

[[package]]
group = "io.micrometer"
artifact = "micrometer-observation"
version = "1.16.6"
file_name = "micrometer-observation-1.16.6.jar"
url = "https://repo1.maven.org/maven2/io/micrometer/micrometer-observation/1.16.6/micrometer-observation-1.16.6.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "io.micrometer"
artifact = "micrometer-commons"
version = "1.16.6"

[[package.dependancies]]
group = "org.jspecify"
artifact = "jspecify"
version = "1.0.0"

[[package]]
group = "jakarta.annotation"
artifact = "jakarta.annotation-api"
version = "3.0.0"
file_name = "jakarta.annotation-api-3.0.0.jar"
url = "https://repo1.maven.org/maven2/jakarta/annotation/jakarta.annotation-api/3.0.0/jakarta.annotation-api-3.0.0.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "org.apache.logging.log4j"
artifact = "log4j-api"
version = "2.25.4"
file_name = "log4j-api-2.25.4.jar"
url = "https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-api/2.25.4/log4j-api-2.25.4.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "org.apache.logging.log4j"
artifact = "log4j-to-slf4j"
version = "2.25.4"
file_name = "log4j-to-slf4j-2.25.4.jar"
url = "https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-to-slf4j/2.25.4/log4j-to-slf4j-2.25.4.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.apache.logging.log4j"
artifact = "log4j-api"
version = "2.25.4"

[[package]]
group = "org.jspecify"
artifact = "jspecify"
version = "1.0.0"
file_name = "jspecify-1.0.0.jar"
url = "https://repo1.maven.org/maven2/org/jspecify/jspecify/1.0.0/jspecify-1.0.0.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "org.slf4j"
artifact = "jul-to-slf4j"
version = "2.0.18"
file_name = "jul-to-slf4j-2.0.18.jar"
url = "https://repo1.maven.org/maven2/org/slf4j/jul-to-slf4j/2.0.18/jul-to-slf4j-2.0.18.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.slf4j"
artifact = "slf4j-api"
version = "2.0.18"

[[package]]
group = "org.slf4j"
artifact = "slf4j-api"
version = "2.0.18"
file_name = "slf4j-api-2.0.18.jar"
url = "https://repo1.maven.org/maven2/org/slf4j/slf4j-api/2.0.18/slf4j-api-2.0.18.jar"
dependancies = []
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package]]
group = "org.springframework"
artifact = "spring-aop"
version = "7.0.8"
file_name = "spring-aop-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-aop/7.0.8/spring-aop-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-beans"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package]]
group = "org.springframework"
artifact = "spring-beans"
version = "7.0.8"
file_name = "spring-beans-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-beans/7.0.8/spring-beans-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package]]
group = "org.springframework"
artifact = "spring-context"
version = "7.0.8"
file_name = "spring-context-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-context/7.0.8/spring-context-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "io.micrometer"
artifact = "micrometer-observation"
version = "1.16.6"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-aop"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-beans"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-expression"
version = "7.0.8"

[[package]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"
file_name = "spring-core-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-core/7.0.8/spring-core-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "commons-logging"
artifact = "commons-logging"
version = "1.3.5"

[[package.dependancies]]
group = "org.jspecify"
artifact = "jspecify"
version = "1.0.0"

[[package]]
group = "org.springframework"
artifact = "spring-expression"
version = "7.0.8"
file_name = "spring-expression-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-expression/7.0.8/spring-expression-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package]]
group = "org.springframework"
artifact = "spring-jdbc"
version = "7.0.8"
file_name = "spring-jdbc-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-jdbc/7.0.8/spring-jdbc-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-beans"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-tx"
version = "7.0.8"

[[package]]
group = "org.springframework"
artifact = "spring-tx"
version = "7.0.8"
file_name = "spring-tx-7.0.8.jar"
url = "https://repo1.maven.org/maven2/org/springframework/spring-tx/7.0.8/spring-tx-7.0.8.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-beans"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"
file_name = "spring-boot-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot/4.1.0/spring-boot-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-context"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-core"
version = "7.0.8"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-autoconfigure"
version = "4.1.0"
file_name = "spring-boot-autoconfigure-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-autoconfigure/4.1.0/spring-boot-autoconfigure-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-jdbc"
version = "4.1.0"
file_name = "spring-boot-jdbc-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-jdbc/4.1.0/spring-boot-jdbc-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-jdbc"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-sql"
version = "4.1.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-transaction"
version = "4.1.0"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-persistence"
version = "4.1.0"
file_name = "spring-boot-persistence-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-persistence/4.1.0/spring-boot-persistence-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-tx"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-sql"
version = "4.1.0"
file_name = "spring-boot-sql-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-sql/4.1.0/spring-boot-sql-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-starter"
version = "4.1.0"
file_name = "spring-boot-starter-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-starter/4.1.0/spring-boot-starter-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "jakarta.annotation"
artifact = "jakarta.annotation-api"
version = "3.0.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-autoconfigure"
version = "4.1.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-starter-logging"
version = "4.1.0"

[[package.dependancies]]
group = "org.yaml"
artifact = "snakeyaml"
version = "2.6"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-starter-jdbc"
version = "4.1.0"
file_name = "spring-boot-starter-jdbc-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-starter-jdbc/4.1.0/spring-boot-starter-jdbc-4.1.0.jar"
packaging = "jar"
root = true
scope = "compile"
annotations = []

[[package.dependancies]]
group = "com.zaxxer"
artifact = "HikariCP"
version = "7.0.2"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-jdbc"
version = "4.1.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-starter"
version = "4.1.0"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-starter-logging"
version = "4.1.0"
file_name = "spring-boot-starter-logging-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-starter-logging/4.1.0/spring-boot-starter-logging-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "ch.qos.logback"
artifact = "logback-classic"
version = "1.5.34"

[[package.dependancies]]
group = "org.apache.logging.log4j"
artifact = "log4j-to-slf4j"
version = "2.25.4"

[[package.dependancies]]
group = "org.slf4j"
artifact = "jul-to-slf4j"
version = "2.0.18"

[[package]]
group = "org.springframework.boot"
artifact = "spring-boot-transaction"
version = "4.1.0"
file_name = "spring-boot-transaction-4.1.0.jar"
url = "https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-transaction/4.1.0/spring-boot-transaction-4.1.0.jar"
packaging = "jar"
root = false
scope = "compile"
annotations = []

[[package.dependancies]]
group = "org.springframework"
artifact = "spring-tx"
version = "7.0.8"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot"
version = "4.1.0"

[[package.dependancies]]
group = "org.springframework.boot"
artifact = "spring-boot-persistence"
version = "4.1.0"

[[package]]
group = "org.yaml"
artifact = "snakeyaml"
version = "2.6"
file_name = "snakeyaml-2.6.jar"
url = "https://repo1.maven.org/maven2/org/yaml/snakeyaml/2.6/snakeyaml-2.6.jar"
dependancies = []
packaging = "bundle"
root = false
scope = "compile"
annotations = []
