tests/snapshots/remove_dependency_test__remove_dependency_config.snap
---
source: tests/remove_dependency_test.rs
expression: toml_after_remove
---
[project]
name = "with-dependency"

[dependancies]
